fix contrast colors

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -18,13 +18,16 @@ header, footer {
 aside {
     text-align: center;
     background-color: #e07a5f;
-    color: white;
+    color: #FEFAE0;
     width: 98%;
     margin: 0 auto;
 }
 #hero img {
     width: 100%;
     height: 100%;
+}
+.location {
+    text-decoration: none;
 }
 #hero {
     position: relative;
@@ -36,10 +39,6 @@ aside {
     margin-left: 5px;
     font-size: 2rem;
 }
-/* #hero .join {
-  
-    
-} */
 #hero a {
     /* background-color: #63e2c6; */
     position: absolute;
@@ -54,12 +53,7 @@ aside {
     background-color: #e07a5f;
 }
 .join2 {
-    background-color: #e07a5f;
-    color: black; 
-    text-decoration: none;
-    font-size: 18px;
-    padding: 5px 10px;
-    border-radius: 5px;
+    display: none;
 }
 .heart {
     font-size: 1.2rem;
