--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -19,7 +19,14 @@
         grid-row-start: 1;
         grid-row-end: 3;
     }
-  
+    .join2 {
+        background-color: #e07a5f;
+        color: black; 
+        text-decoration: none;
+        font-size: 18px;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
     #news {
         grid-column: 1/3;
         grid-row: 2/3;
